Fixed display width on mobile devices and tweaked game section margins

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -4118,6 +4118,12 @@ textarea.form-control.is-invalid {
   max-width: 64rem;
 }
 
+.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -4296,6 +4302,10 @@ textarea.form-control.is-invalid {
 
 .fill-current {
   fill: currentColor;
+}
+
+.stroke-cyan-500 {
+  stroke: #06b6d4;
 }
 
 .p-0 {
@@ -4578,6 +4588,11 @@ textarea.form-control.is-invalid {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.drop-shadow-2xl {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -4817,6 +4832,14 @@ textarea.form-control.is-invalid {
     margin-top: 3rem;
   }
 
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .sm\:mt-11 {
+    margin-top: 2.75rem;
+  }
+
   .sm\:h-64 {
     height: 16rem;
   }
@@ -4904,6 +4927,10 @@ textarea.form-control.is-invalid {
 
   .md\:mt-24 {
     margin-top: 6rem;
+  }
+
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .md\:block {
@@ -5017,6 +5044,18 @@ textarea.form-control.is-invalid {
 
   .lg\:mt-14 {
     margin-top: 3.5rem;
+  }
+
+  .lg\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .lg\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .lg\:w-1\/4 {
